bdr.BDR.scala.error
Compilation error:
BDR:3: error: value getIndication is not a member of String
  message=message.getIndication();
                  ^